force-app/main/default/objects/Queue_Sub_Type_w_Disposition__mdt/Queue_Sub_Type_w_Disposition__mdt.object-meta.xml
<CustomObject>
    <label>Queue Sub Type w/ Disposition</label>
    <pluralLabel>Queue Sub Type w/ Dispositions</pluralLabel>
</CustomObject>