force-app/main/default/objects/Queue_Sub_Type_w_Disposition__mdt/fields/Disposition_1__c.field-meta.xml
<CustomField>
    <fullName>Disposition_1__c</fullName>
    <label>Disposition 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>243/391 Both Warehouses Cancel Request *</fullName>
                <default>true</default>
                <label>243/391 Both Warehouses Cancel Request *</label>
            </value>
            <value>
                <fullName>Add/Update/Remove from Email List</fullName>
            </value>
            <value>
                <fullName>Address Correction</fullName>
            </value>
            <value>
                <fullName>Availability Inquiry Advertised Item</fullName>
            </value>
            <value>
                <fullName>Availability Inquiry Non-Advertised</fullName>
            </value>
            <value>
                <fullName>Benefits/Payroll/HR</fullName>
            </value>
            <value>
                <fullName>BPP General Inquiry/Complaint</fullName>
            </value>
            <value>
                <fullName>Bulk Order</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Complaint from Employee</fullName>
            </value>
            <value>
                <fullName>Coupon / email not received</fullName>
            </value>
            <value>
                <fullName>Create Registry</fullName>
            </value>
            <value>
                <fullName>Creation issue</fullName>
            </value>
            <value>
                <fullName>Credit Inquiry</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Card inquiry</fullName>
            </value>
            <value>
                <fullName>Customer Received Email when Opted Out</fullName>
            </value>
            <value>
                <fullName>Delete Registry</fullName>
            </value>
            <value>
                <fullName>Delivery Timeframe</fullName>
            </value>
            <value>
                <fullName>Donation Request</fullName>
            </value>
            <value>
                <fullName>Duplicate Email</fullName>
            </value>
            <value>
                <fullName>Employment Opportunity Inquiry</fullName>
            </value>
            <value>
                <fullName>English Product not Sold in Quebec</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Fraud Cancel</fullName>
            </value>
            <value>
                <fullName>General - Store specific inquiry</fullName>
            </value>
            <value>
                <fullName>General inquiry</fullName>
            </value>
            <value>
                <fullName>General Inquiry - International Other</fullName>
            </value>
            <value>
                <fullName>General inquiry (shipping, etc)</fullName>
            </value>
            <value>
                <fullName>General Product Information</fullName>
            </value>
            <value>
                <fullName>General Registry Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>