force-app/main/default/objects/Queue_Sub_Type_w_Disposition__mdt/fields/Disposition_2__c.field-meta.xml
<CustomField>
    <fullName>Disposition_2__c</fullName>
    <label>Disposition 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>AL1</fullName>
            </value>
            <value>
                <fullName>AL1 - 2 days or less</fullName>
            </value>
            <value>
                <fullName>AL1 - over 2 days</fullName>
            </value>
            <value>
                <fullName>AL1 - Wrong order</fullName>
            </value>
            <value>
                <fullName>AL1 - Wrong product</fullName>
            </value>
            <value>
                <fullName>AL1 &amp; SFS - 2 days or less</fullName>
            </value>
            <value>
                <fullName>AL1 &amp; SFS - over 2 days</fullName>
            </value>
            <value>
                <fullName>AL1 Cancel Request</fullName>
            </value>
            <value>
                <fullName>AL1/SFS Both Warehouses Cancel Request</fullName>
            </value>
            <value>
                <fullName>Alleged Safety Concerns (no injury)</fullName>
            </value>
            <value>
                <fullName>Allergic Reaction</fullName>
            </value>
            <value>
                <fullName>Already Shipped</fullName>
            </value>
            <value>
                <fullName>Authorization Explanation of hold/process</fullName>
            </value>
            <value>
                <fullName>Authorization Void request</fullName>
            </value>
            <value>
                <fullName>Balance Inquiry</fullName>
            </value>
            <value>
                <fullName>Broken/Damaged</fullName>
            </value>
            <value>
                <fullName>Canada Post</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Cancel - OMS / No warehouse</fullName>
            </value>
            <value>
                <fullName>Cancellation not Credited</fullName>
            </value>
            <value>
                <fullName>Clarification of Return Policy</fullName>
            </value>
            <value>
                <fullName>Combine GC</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Content of Product</fullName>
            </value>
            <value>
                <fullName>CornerStone</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Card Issues</fullName>
            </value>
            <value>
                <fullName>Cust Not Satisfied with Resolution</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>