force-app/main/default/objects/Queue_Sub_Type_w_Disposition__mdt/fields/Queue_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Sub_Type__c</fullName>
    <label>Queue Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Address Correction</fullName>
            </value>
            <value>
                <fullName>Bin Check</fullName>
            </value>
            <value>
                <fullName>Carrier claim (Canada Post)</fullName>
            </value>
            <value>
                <fullName>Carrier claim (not Canada Post)</fullName>
            </value>
            <value>
                <fullName>Drop Ship</fullName>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>Escalation Follow Up</fullName>
                <default>true</default>
                <label>Escalation Follow Up</label>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>ISPU</fullName>
            </value>
            <value>
                <fullName>Payment Inquiries</fullName>
            </value>
            <value>
                <fullName>Price Match</fullName>
            </value>
            <value>
                <fullName>Return Label - HWP</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Tech Issue</fullName>
            </value>
            <value>
                <fullName>WIZMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>